--- a/ces/src/main/resources/application.properties
+++ b/ces/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=ces
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cesweb
+spring.datasource.username=root
+spring.datasource.password=root
+server.port=8080
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+server.error.include-message = Always
